[build-system]
requires = ["hatchling", "typing", "collections", "pytest", "pytest-unordered"]
build-backend = "hatchling.build"

[project]
name = "implement_hashtable"
version = "1.0.0"
authors = [
  { name="Nicole Gay", email="nicole.r.gay@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Tutorial" = "https://realpython.com/python-hash-table"
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"